Fix images vertical aligning

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -1,4 +1,5 @@
 img {
+  vertical-align: middle;
   image-rendering: crisp-edges;
   image-rendering: pixelated;
 }
